--- a/cookies.toml
+++ b/cookies.toml
@@ -1,2 +1,2 @@
 [cookies]
-sessionid = "La valeur que vous avez pris dans votre navigateur internet"
+sessionid = "The value you have get in your web browser"
