--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "foodle-cli"
+name = "foodle_cli"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,3 +14,5 @@ reqwest = { version = "0.11.18", features = ["blocking", "json"] }
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.103"
 toml = "0.7.6"
+foodle_api = { path = "../foodle_api" }
+fluent-bundle = "0.15.2"
